--- a/src/main/resources/assets/stardewvalley/lang/en_us.json
+++ b/src/main/resources/assets/stardewvalley/lang/en_us.json
@@ -82,6 +82,56 @@
   "item.stardewvalley.mineral_prismatic_shard": "Prismatic Shard",
 
   "item.stardewvalley.dragontooth_cutlass": "Dragontooth Cutlass",
+  "item.stardewvalley.infinity_dagger": "Infinity Dagger",
+  "item.stardewvalley.dwarf_dagger": "Dwarf Dagger",
+  "item.stardewvalley.dragontooth_club": "Dragontooth Club",
+  "item.stardewvalley.dragontooth_shiv": "Dragontooth Shiv",
+  "item.stardewvalley.ossified_blade": "Ossified Blade",
+  "item.stardewvalley.iridium_needle": "Iridium Needle",
+  "item.stardewvalley.infinity_blade": "Infinity Blade",
+  "item.stardewvalley.infinity_gavel": "Infinity Gavel",
+  "item.stardewvalley.dwarf_hammer": "Dwarf Hammer",
+  "item.stardewvalley.dwarf_sword": "Dwarf Sword",
+  "item.stardewvalley.golden_scythe": "Golden Scythe",
+  "item.stardewvalley.tempered_broadsword": "Tempered Broadsword",
+  "item.stardewvalley.broken_trident": "Broken Trident",
+  "item.stardewvalley.steel_falchion": "Steel Falchion",
+  "item.stardewvalley.rapier": "Rapier",
+  "item.stardewvalley.yeti_tooth": "Yeti Tooth",
+  "item.stardewvalley.abbys_planchette": "Abby's Planchette",
+  "item.stardewvalley.slingshot": "Slingshot",
+  "item.stardewvalley.master_slingshot": "Master Slingshot",
+  "item.stardewvalley.galaxy_slingshot": "Galaxy Slingshot",
+  "item.stardewvalley.elliots.slingshot": "Elliot's Pencil",
+  "item.stardewvalley.marus_wrench": "Maru's Wrench",
+  "item.stardewvalley.harveys_mallet": "Harvey's Mallet",
+  "item.stardewvalley.pennys_fryer": "Penny's Fryer",
+  "item.stardewvalley.leahs_whittler": "Leah's Whittler",
+  "item.stardewvalley.femur": "Femur",
+  "item.stardewvalley.galaxy_dagger": "Galaxy Dagger",
+  "item.stardewvalley.wind_spire": "Wind Spire",
+  "item.stardewvalley.crystal_dagger": "Crystal Dagger",
+  "item.stardewvalley.elf_blade": "Elf Blade",
+  "item.stardewvalley.shadow_dagger": "Shadow Dagger",
+  "item.stardewvalley.burglars_shank": "Burglar's Shank",
+  "item.stardewvalley.iron_dirk": "Iron Dirk",
+  "item.stardewvalley.carving_knife": "Carving Knife",
+  "item.stardewvalley.forest_sword": "Forest Sword",
+  "item.stardewvalley.neptunes_glaive": "Neptune's Glaive",
+  "item.stardewvalley.insect_head": "Insect Head",
+  "item.stardewvalley.wooden_blade": "Wooden Blade",
+  "item.stardewvalley.steel_smallsword": "Steel Smallsword",
+  "item.stardewvalley.claymore": "Claymore",
+  "item.stardewvalley.lava_katana": "Lava Katana",
+  "item.stardewvalley.obsidian_edge": "Obsidian Edge",
+  "item.stardewvalley.templars_blade": "Templar's Blade",
+  "item.stardewvalley.iron_edge": "Iron Edge",
+  "item.stardewvalley.bone_sword": "Bone Sword",
+  "item.stardewvalley.galaxy_sword": "Galaxy Sword",
+  "item.stardewvalley.holy_blade": "Holy Blade",
+  "item.stardewvalley.dark_sword": "Dark Sword",
+  "item.stardewvalley.silver_saber": "Silver Saber",
+  "item.stardewvalley.rusty_sword": "Rusty Sword",
 
   "item.stardewvalley.crystalarium": "Crystalarium",
 
