Added language data for the Tools

--- a/src/main/resources/assets/stardewvalley/lang/en_us.json
+++ b/src/main/resources/assets/stardewvalley/lang/en_us.json
@@ -150,6 +150,39 @@
   "item.stardewvalley.silver_saber": "Silver Saber",
   "item.stardewvalley.rusty_sword": "Rusty Sword",
 
+  "item.stardewvalley.hoe": "Hoe",
+  "item.stardewvalley.copper_hoe": "Copper Hoe",
+  "item.stardewvalley.steel_hoe": "Steel Hoe",
+  "item.stardewvalley.gold_hoe": "Gold Hoe",
+  "item.stardewvalley.iridium_hoe": "Iridium Hoe",
+  "item.stardewvalley.axe": "Axe",
+  "item.stardewvalley.copper_axe": "Copper Axe",
+  "item.stardewvalley.steel_axe": "Steel Axe",
+  "item.stardewvalley.gold_axe": "Gold Axe",
+  "item.stardewvalley.iridium_axe": "Iridium Axe",
+  "item.stardewvalley.pickaxe": "Pickaxe",
+  "item.stardewvalley.copper_pickaxe": "Copper Pickaxe",
+  "item.stardewvalley.steel_pickaxe": "Steel Pickaxe",
+  "item.stardewvalley.gold_pickaxe": "Gold Pickaxe",
+  "item.stardewvalley.iridium_pickaxe": "Iridium Pickaxe",
+  "item.stardewvalley.watering_can": "Watering Can",
+  "item.stardewvalley.copper_watering_can": "Copper Watering Can",
+  "item.stardewvalley.steel_watering_can": "Steel Watering Can",
+  "item.stardewvalley.gold_watering_can": "Gold Watering Can",
+  "item.stardewvalley.iridium_watering_can": "Iridium Watering Can",
+  "item.stardewvalley.bamboo_pole": "Bamboo Pole",
+  "item.stardewvalley.fiberglass_rod": "Fiberglass Rod",
+  "item.stardewvalley.iridium_rod": "Iridium Rod",
+  "item.stardewvalley.training_rod": "Training Rod",
+  "item.stardewvalley.scythe": "Scythe",
+  "item.stardewvalley.milk_pail": "Milk Pail",
+  "item.stardewvalley.shears": "Shears",
+  "item.stardewvalley.copper_pan": "Copper Pan",
+  "item.stardewvalley.copper_trash_can": "Copper Trash Can",
+  "item.stardewvalley.steel_trash_can": "Steel Trash Can",
+  "item.stardewvalley.gold_trash_can": "Gold Trash Can",
+  "item.stardewvalley.iridium_trash_can": "Iridium Trash Can",
+
   "block.stardewvalley.crystalarium": "Crystalarium",
   "block.stardewvalley.scarecrow": "Scarecrow",
 
@@ -158,5 +191,6 @@
   "itemGroup.stardewtab": "Stardew Valley",
   "itemGroup.artifactstab": "Artifacts",
   "itemGroup.mineralstab": "Minerals",
-  "itemGroup.weaponstab": "Weapons"
+  "itemGroup.weaponstab": "Weapons",
+  "itemGroup.toolstab": "Tools"
 }
