--- a/src/main/resources/assets/stardewvalley/lang/en_us.json
+++ b/src/main/resources/assets/stardewvalley/lang/en_us.json
@@ -192,16 +192,22 @@
   "item.stardewvalley.parsnip": "Parsnip",
   "item.stardewvalley.garlic": "Garlic",
   "item.stardewvalley.blue_jazz": "Blue Jazz",
+  "item.stardewvalley.coffee_bean": "Coffee Bean",
+  "item.stardewvalley.ancient_fruit": "Ancient Fruit",
 
   "item.stardewvalley.cauliflower_seeds": "Cauliflower Seeds",
   "item.stardewvalley.parsnip_seeds": "Parsnip Seeds",
   "item.stardewvalley.garlic_seeds": "Garlic Seeds",
   "item.stardewvalley.blue_jazz_seeds": "Jazz Seeds",
+  "item.stardewvalley.coffee_bean_seeds": "Coffee Bean Seeds",
+  "item.stardewvalley.ancient_fruit_seeds": "Ancient Fruit Seeds",
 
   "block.stardewvalley.cauliflower_crop": "Cauliflower",
   "block.stardewvalley.parsnip_crop": "Parsnip",
   "block.stardewvalley.garlic_crop": "Garlic",
   "block.stardewvalley.blue_jazz_crop": "Blue Jazz",
+  "block.stardewvalley.coffee_bean_crop": "Coffee Bean",
+  "block.stardewvalley.ancient_fruit_crop": "Ancient Fruit",
 
 
 
